mime/driver/MimeParser.py
# Generated from MimeParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MimeParser ( Parser ):

    grammarFileName = "MimeParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "';'", "'/'", "'='", "','", "'.'", 
                     "'('", "')'", "'<'", "'>'", "'--'", "'_'", "'\\'", 
                     "'\\r\\n'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\"'" ]

    symbolicNames = [ "<INVALID>", "COLON", "SEMICOLON", "SLASH", "EQUALS", 
                      "COMMA", "PERIOD", "LPAREN", "RPAREN", "LANGLE", "RANGLE", 
                      "DOUBLE_DASH", "UNDERLINE", "BACKSLASH", "CRLF", "LF", 
                      "WSP", "FWS", "BOUNDARY_LINE", "VERSION", "DIGITS", 
                      "QUOTE_START", "WORD", "SPECIAL_TOKEN", "CONTENT_CHAR", 
                      "COMMENT_CHAR", "BODY_CONTENT", "BODY_LINE", "SKIP_WSP", 
                      "QUOTE_END", "QUOTED_ESCAPE", "QUOTED_CONTENT" ]

    RULE_mimeMessage = 0
    RULE_headersOnly = 1
    RULE_blankLine = 2
    RULE_headersBody = 3
    RULE_simpleBody = 4
    RULE_multipart = 5
    RULE_header = 6
    RULE_headerName = 7
    RULE_headerValue = 8
    RULE_headerValueContent = 9
    RULE_headerValuePart = 10
    RULE_mediaType = 11
    RULE_quotedString = 12
    RULE_quotedStringContent = 13
    RULE_comment = 14
    RULE_commentContent = 15
    RULE_escapedChar = 16
    RULE_parameter = 17
    RULE_parameterValue = 18
    RULE_preamble = 19
    RULE_part = 20
    RULE_epilogue = 21
    RULE_boundaryLine = 22
    RULE_body = 23
    RULE_bodyContent = 24
    RULE_bodyLine = 25
    RULE_contentData = 26

    ruleNames =  [ "mimeMessage", "headersOnly", "blankLine", "headersBody", 
                   "simpleBody", "multipart", "header", "headerName", "headerValue", 
                   "headerValueContent", "headerValuePart", "mediaType", 
                   "quotedString", "quotedStringContent", "comment", "commentContent", 
                   "escapedChar", "parameter", "parameterValue", "preamble", 
                   "part", "epilogue", "boundaryLine", "body", "bodyContent", 
                   "bodyLine", "contentData" ]

    EOF = Token.EOF
    COLON=1
    SEMICOLON=2
    SLASH=3
    EQUALS=4
    COMMA=5
    PERIOD=6
    LPAREN=7
    RPAREN=8
    LANGLE=9
    RANGLE=10
    DOUBLE_DASH=11
    UNDERLINE=12
    BACKSLASH=13
    CRLF=14
    LF=15
    WSP=16
    FWS=17
    BOUNDARY_LINE=18
    VERSION=19
    DIGITS=20
    QUOTE_START=21
    WORD=22
    SPECIAL_TOKEN=23
    CONTENT_CHAR=24
    COMMENT_CHAR=25
    BODY_CONTENT=26
    BODY_LINE=27
    SKIP_WSP=28
    QUOTE_END=29
    QUOTED_ESCAPE=30
    QUOTED_CONTENT=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MimeMessageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleBody(self):
            return self.getTypedRuleContext(MimeParser.SimpleBodyContext,0)


        def headersOnly(self):
            return self.getTypedRuleContext(MimeParser.HeadersOnlyContext,0)


        def headersBody(self):
            return self.getTypedRuleContext(MimeParser.HeadersBodyContext,0)


        def multipart(self):
            return self.getTypedRuleContext(MimeParser.MultipartContext,0)


        def getRuleIndex(self):
            return MimeParser.RULE_mimeMessage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMimeMessage" ):
                listener.enterMimeMessage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMimeMessage" ):
                listener.exitMimeMessage(self)




    def mimeMessage(self):

        localctx = MimeParser.MimeMessageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mimeMessage)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.simpleBody()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.headersOnly()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.headersBody()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.multipart()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadersOnlyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MimeParser.HeaderContext)
            else:
                return self.getTypedRuleContext(MimeParser.HeaderContext,i)


        def getRuleIndex(self):
            return MimeParser.RULE_headersOnly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeadersOnly" ):
                listener.enterHeadersOnly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeadersOnly" ):
                listener.exitHeadersOnly(self)




    def headersOnly(self):

        localctx = MimeParser.HeadersOnlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_headersOnly)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.header()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==22):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlankLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CRLF(self):
            return self.getToken(MimeParser.CRLF, 0)

        def LF(self):
            return self.getToken(MimeParser.LF, 0)

        def getRuleIndex(self):
            return MimeParser.RULE_blankLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlankLine" ):
                listener.enterBlankLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlankLine" ):
                listener.exitBlankLine(self)




    def blankLine(self):

        localctx = MimeParser.BlankLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blankLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not(_la==14 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadersBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blankLine(self):
            return self.getTypedRuleContext(MimeParser.BlankLineContext,0)


        def body(self):
            return self.getTypedRuleContext(MimeParser.BodyContext,0)


        def header(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MimeParser.HeaderContext)
            else:
                return self.getTypedRuleContext(MimeParser.HeaderContext,i)


        def getRuleIndex(self):
            return MimeParser.RULE_headersBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeadersBody" ):
                listener.enterHeadersBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeadersBody" ):
                listener.exitHeadersBody(self)




    def headersBody(self):

        localctx = MimeParser.HeadersBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_headersBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 67
                self.header()
                self.state = 70 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==22):
                    break

            self.state = 72
            self.blankLine()
            self.state = 73
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(MimeParser.BodyContext,0)


        def getRuleIndex(self):
            return MimeParser.RULE_simpleBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleBody" ):
                listener.enterSimpleBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleBody" ):
                listener.exitSimpleBody(self)




    def simpleBody(self):

        localctx = MimeParser.SimpleBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_simpleBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultipartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blankLine(self):
            return self.getTypedRuleContext(MimeParser.BlankLineContext,0)


        def boundaryLine(self):
            return self.getTypedRuleContext(MimeParser.BoundaryLineContext,0)


        def header(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MimeParser.HeaderContext)
            else:
                return self.getTypedRuleContext(MimeParser.HeaderContext,i)


        def preamble(self):
            return self.getTypedRuleContext(MimeParser.PreambleContext,0)


        def part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MimeParser.PartContext)
            else:
                return self.getTypedRuleContext(MimeParser.PartContext,i)


        def epilogue(self):
            return self.getTypedRuleContext(MimeParser.EpilogueContext,0)


        def CRLF(self):
            return self.getToken(MimeParser.CRLF, 0)

        def LF(self):
            return self.getToken(MimeParser.LF, 0)

        def getRuleIndex(self):
            return MimeParser.RULE_multipart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultipart" ):
                listener.enterMultipart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultipart" ):
                listener.exitMultipart(self)




    def multipart(self):

        localctx = MimeParser.MultipartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_multipart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.header()
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==22):
                    break

            self.state = 82
            self.blankLine()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32767998) != 0):
                self.state = 83
                self.preamble()


            self.state = 87 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 86
                    self.part()

                else:
                    raise NoViableAltException(self)
                self.state = 89 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 91
            self.boundaryLine()
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 92
                _la = self._input.LA(1)
                if not(_la==14 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32767998) != 0):
                self.state = 95
                self.epilogue()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headerName(self):
            return self.getTypedRuleContext(MimeParser.HeaderNameContext,0)


        def COLON(self):
            return self.getToken(MimeParser.COLON, 0)

        def headerValue(self):
            return self.getTypedRuleContext(MimeParser.HeaderValueContext,0)


        def CRLF(self):
            return self.getToken(MimeParser.CRLF, 0)

        def LF(self):
            return self.getToken(MimeParser.LF, 0)

        def WSP(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.WSP)
            else:
                return self.getToken(MimeParser.WSP, i)

        def getRuleIndex(self):
            return MimeParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = MimeParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.headerName()
            self.state = 99
            self.match(MimeParser.COLON)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 100
                self.match(MimeParser.WSP)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.headerValue()
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==14 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.WORD)
            else:
                return self.getToken(MimeParser.WORD, i)

        def UNDERLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.UNDERLINE)
            else:
                return self.getToken(MimeParser.UNDERLINE, i)

        def getRuleIndex(self):
            return MimeParser.RULE_headerName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderName" ):
                listener.enterHeaderName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderName" ):
                listener.exitHeaderName(self)




    def headerName(self):

        localctx = MimeParser.HeaderNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_headerName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(MimeParser.WORD)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 110
                self.match(MimeParser.UNDERLINE)
                self.state = 111
                self.match(MimeParser.WORD)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headerValueContent(self):
            return self.getTypedRuleContext(MimeParser.HeaderValueContentContext,0)


        def WSP(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.WSP)
            else:
                return self.getToken(MimeParser.WSP, i)

        def SEMICOLON(self):
            return self.getToken(MimeParser.SEMICOLON, 0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MimeParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MimeParser.ParameterContext,i)


        def getRuleIndex(self):
            return MimeParser.RULE_headerValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderValue" ):
                listener.enterHeaderValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderValue" ):
                listener.exitHeaderValue(self)




    def headerValue(self):

        localctx = MimeParser.HeaderValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_headerValue)
        self._la = 0 # Token type
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 6, 7, 9, 10, 12, 19, 20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.headerValueContent()
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 118
                        self.match(MimeParser.WSP) 
                    self.state = 123
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 124
                    self.match(MimeParser.SEMICOLON)


                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16 or _la==22:
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==16:
                        self.state = 127
                        self.match(MimeParser.WSP)
                        self.state = 132
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 133
                    self.parameter()
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [14, 15]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderValueContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headerValuePart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MimeParser.HeaderValuePartContext)
            else:
                return self.getTypedRuleContext(MimeParser.HeaderValuePartContext,i)


        def WSP(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.WSP)
            else:
                return self.getToken(MimeParser.WSP, i)

        def getRuleIndex(self):
            return MimeParser.RULE_headerValueContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderValueContent" ):
                listener.enterHeaderValueContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderValueContent" ):
                listener.exitHeaderValueContent(self)




    def headerValueContent(self):

        localctx = MimeParser.HeaderValueContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_headerValueContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.headerValuePart()
            self.state = 152
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==16:
                        self.state = 143
                        self.match(MimeParser.WSP)
                        self.state = 148
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 149
                    self.headerValuePart() 
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderValuePartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.WORD)
            else:
                return self.getToken(MimeParser.WORD, i)

        def SPECIAL_TOKEN(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.SPECIAL_TOKEN)
            else:
                return self.getToken(MimeParser.SPECIAL_TOKEN, i)

        def VERSION(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.VERSION)
            else:
                return self.getToken(MimeParser.VERSION, i)

        def DIGITS(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.DIGITS)
            else:
                return self.getToken(MimeParser.DIGITS, i)

        def mediaType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MimeParser.MediaTypeContext)
            else:
                return self.getTypedRuleContext(MimeParser.MediaTypeContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MimeParser.CommentContext)
            else:
                return self.getTypedRuleContext(MimeParser.CommentContext,i)


        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.SLASH)
            else:
                return self.getToken(MimeParser.SLASH, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.COMMA)
            else:
                return self.getToken(MimeParser.COMMA, i)

        def PERIOD(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.PERIOD)
            else:
                return self.getToken(MimeParser.PERIOD, i)

        def LANGLE(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.LANGLE)
            else:
                return self.getToken(MimeParser.LANGLE, i)

        def RANGLE(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.RANGLE)
            else:
                return self.getToken(MimeParser.RANGLE, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.COLON)
            else:
                return self.getToken(MimeParser.COLON, i)

        def EQUALS(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.EQUALS)
            else:
                return self.getToken(MimeParser.EQUALS, i)

        def UNDERLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.UNDERLINE)
            else:
                return self.getToken(MimeParser.UNDERLINE, i)

        def quotedString(self):
            return self.getTypedRuleContext(MimeParser.QuotedStringContext,0)


        def getRuleIndex(self):
            return MimeParser.RULE_headerValuePart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderValuePart" ):
                listener.enterHeaderValuePart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderValuePart" ):
                listener.exitHeaderValuePart(self)




    def headerValuePart(self):

        localctx = MimeParser.HeaderValuePartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_headerValuePart)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 6, 7, 9, 10, 12, 19, 20, 22, 23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 169
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                        if la_ == 1:
                            self.state = 155
                            self.match(MimeParser.WORD)
                            pass

                        elif la_ == 2:
                            self.state = 156
                            self.match(MimeParser.SPECIAL_TOKEN)
                            pass

                        elif la_ == 3:
                            self.state = 157
                            self.match(MimeParser.VERSION)
                            pass

                        elif la_ == 4:
                            self.state = 158
                            self.match(MimeParser.DIGITS)
                            pass

                        elif la_ == 5:
                            self.state = 159
                            self.mediaType()
                            pass

                        elif la_ == 6:
                            self.state = 160
                            self.comment()
                            pass

                        elif la_ == 7:
                            self.state = 161
                            self.match(MimeParser.SLASH)
                            pass

                        elif la_ == 8:
                            self.state = 162
                            self.match(MimeParser.COMMA)
                            pass

                        elif la_ == 9:
                            self.state = 163
                            self.match(MimeParser.PERIOD)
                            pass

                        elif la_ == 10:
                            self.state = 164
                            self.match(MimeParser.LANGLE)
                            pass

                        elif la_ == 11:
                            self.state = 165
                            self.match(MimeParser.RANGLE)
                            pass

                        elif la_ == 12:
                            self.state = 166
                            self.match(MimeParser.COLON)
                            pass

                        elif la_ == 13:
                            self.state = 167
                            self.match(MimeParser.EQUALS)
                            pass

                        elif la_ == 14:
                            self.state = 168
                            self.match(MimeParser.UNDERLINE)
                            pass



                    else:
                        raise NoViableAltException(self)
                    self.state = 171 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.quotedString()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MediaTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(MimeParser.WORD)
            else:
                return self.getToken(MimeParser.WORD, i)

        def SLASH(self):
            return self.getToken(MimeParser.SLASH, 0)

        def getRuleIndex(self):
            return MimeParser.RULE_mediaType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMediaType" ):
                listener.enterMediaType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMediaType" ):
                listener.exitMediaType(self)




    def mediaType(self):
